--- a/bot/package.json
+++ b/bot/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.0",
     "telegraf": "^4.7.0",
