--- a/orderService/package.json
+++ b/orderService/package.json
@@ -1,7 +1,7 @@
 {
   "name": "orderService",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.17.13",
